--- a/app/views/settings/_navi.html.erb
+++ b/app/views/settings/_navi.html.erb
@@ -26,7 +26,7 @@
             <li><%= link_to 'Notification Center', settings_notifications_path, :rel => "nofollow" %></li>
             <li><%= link_to 'Privacy'            , settings_privacy_path , :rel => "nofollow" %></li>
             <li><%= link_to 'API Key'            , settings_api_path     , :rel => "nofollow" %></li>
-            <li><%= link_to 'users'              , users_path, :rel => "nofollow" %></li>
+            <li><%= link_to 'Users'              , users_path, :rel => "nofollow" %></li>
             <hr/>
             <li><%= link_to 'Maven Repository'   , settings_mvnrepos_path , :rel => "nofollow" %></li>
             <li><%= link_to 'Satis Repository'   , settings_satis_path    , :rel => "nofollow" %></li>
