--- a/app/views/shared/_product_license_table.html.erb
+++ b/app/views/shared/_product_license_table.html.erb
@@ -139,6 +139,8 @@ jQuery(function(){
     <br/><br/>
   <% end %>
 
+  <% license_hash = {'a' => { 'count' => 1}, 'b' => {'count' => 2} } %>
+
 <% if display_charts == true && license_hash.count > 1 %>
   <div id='pie2' style="text-align: center;">
   	<canvas id="pie2-chart" style="margin: auto; max-width: 350px; max-height: 350px;"></canvas>
@@ -159,22 +161,47 @@ jQuery(function(){
 				<% license_hash.sort.map do |license_name, value| %>
 					{
 						label: "<%= license_name %>",
-						value: <%= license_hash[license_name].count %>,
-						<% if license_name.match(/\AGPL/i) %>
-							color: '#E64A19'
-						<% elsif license_name.match(/\AUnknown/i) %>
-							color: '#FFC107'
-						<% else %>
-							color: '#8BC34A'
-						<% end %>
+						value: <%= license_hash[license_name].count %>
 					},
 				<% end %>
 			];
 
-			licCounts.forEach(function(item){
+      function hex2rgb(h) {
+        return [(h & (255 << 16)) >> 16, (h & (255 << 8)) >> 8, h & 255];
+      }
+      function distance(a, b) {
+        var d = [a[0] - b[0], a[1] - b[1], a[2] - b[2]];
+        return Math.sqrt((d[0]*d[0]) + (d[1]*d[1]) + (d[2]*d[2]));
+      }
+      function freshColor(sofar, d) {
+        var n, ok;
+        while(true) {
+            ok = true;
+            n = Math.random()*0xFFFFFF<<0;
+            for(var c in sofar) {
+                if(distance(hex2rgb(sofar[c]), hex2rgb(n)) < d) {
+                    ok = false;
+                    break;
+                }
+            }
+            if(ok) { return Number(n).toString(16); }
+        }
+      }
+      function getColors(n, d) {
+        var a = [];
+        for(; n > 0; n--) {
+          a.push( "#" + freshColor(a, d));
+        }
+        return a;
+      }
+
+      var n = licCounts.length;
+      var colors = getColors(n + 1, 400 / n);
+
+			licCounts.forEach(function(item, i){
 				labels.push(item.label);
 				dataset.data.push(item.value);
-				dataset.backgroundColor.push(item['color']);
+				dataset.backgroundColor.push(colors[i]);
 			});
 
 			//-- render graph
