Make paging more robust

--- a/app/views/products/_show_search_results.html.erb
+++ b/app/views/products/_show_search_results.html.erb
@@ -3,7 +3,7 @@
     <%= render :partial => 'products/show_empty_results' %>
   <% else %>
     <%= render :partial => 'products/show_search_results_iterator', :locals => { :products => products, :prefix => 'search', :name_limit => name_limit } %>
-    <% if paginate == true && !products.nil? && !products.empty? %>
+    <% if paginate == true && !products.nil? && !products.empty? && defined?(@products.total_pages) %>
       <div class = "pagination pagination-right pagination-mini" >
         <%= will_paginate products %>
       </div>
