Simplify adding to component whitelist

--- a/app/views/user/projects/helpers/_project_dependency_row.html.erb
+++ b/app/views/user/projects/helpers/_project_dependency_row.html.erb
@@ -1,4 +1,4 @@
-<% product = dep.find_or_init_product %>
+
 <tr class="flash <%= dep[:status_class] || 'info' %> dep_row" id="<%= dep.id.to_s %>__row"  >
   <td style="padding-left: 5px;">
     <span >
@@ -6,13 +6,18 @@
         <a class="#a dep_link" href="<%= dep.ext_link %>" >
           <span><%= dep.name %></span>
         </a>
+        <%= render :partial => "/component_whitelists/add_to_cwl", :locals => { :project => @project, :dep => dep } %>
       <% elsif dep.known? %>
+        <% product = dep.find_or_init_product %>
         <a class="#a dep_link" href="<%= product_version_path( product, dep.version_requested ) %>" >
           <span><%= product.name %></span>
         </a>
+        <%= render :partial => "/component_whitelists/add_to_cwl", :locals => { :project => @project, :dep => dep } %>
       <% else %>
         <span><%= dep.name %></span>
+        <%= render :partial => "/component_whitelists/add_to_cwl", :locals => { :project => @project, :dep => dep } %>
       <% end %>
+
     </span>
   </td>
   <td>
