--- a/app/views/shared/_product_license_table.html.erb
+++ b/app/views/shared/_product_license_table.html.erb
@@ -66,6 +66,9 @@
             <% if license && license.respond_to?('on_cwl') && license.respond_to?('on_whitelist') && license.on_cwl == true && license.on_whitelist == false %>
               <i class="fa fa-thumbs-o-up" style="color: blue" title="whitelistted through component whitelist"></i>
             <% end %>
+            <% if license.respond_to?('is_whitelisted?') && license.is_whitelisted? == false %>
+              <%= render :partial => "/component_whitelists/add_to_cwl", :locals => { :component_whitelist => @project.component_whitelist, :dep => dependency } %>
+            <% end %>
           </td>
           <td style="padding-left: 5px;">
             <%= render :partial => "shared/license_name", :locals => {:license => license } %>
@@ -81,8 +84,10 @@
         <td style="padding-left: 5px;">
           <% if dependency.prod_key %>
             <a class="#a dep_link" href="<%= product_url_for_projectdependency(dependency) %>" ><%= dependency.name %> : <%= dep_version %></a>
+            <%= render :partial => "/component_whitelists/add_to_cwl", :locals => { :component_whitelist => @project.component_whitelist, :dep => dependency } %>
           <% else %>
             <%= dependency.name %>
+            <%= render :partial => "/component_whitelists/add_to_cwl", :locals => { :component_whitelist => @project.component_whitelist, :dep => dependency } %>
           <% end %>
         </td>
         <td style="padding-left: 5px;"> UNKNOWN </td>
@@ -104,10 +109,10 @@ jQuery(function(){
 
   var dataset = {
     data: [<%= whitelisted_count %>, <%= unknown_count %>, <%= violated_count %>],
-    backgroundColor: ["#8BC34A", "#FFC107", "#E64A19"]  
+    backgroundColor: ["#8BC34A", "#FFC107", "#E64A19"]
   }
 
-  var is_any_positive = _.some(dataset['data'], function(a){return a > 0;}); 
+  var is_any_positive = _.some(dataset['data'], function(a){return a > 0;});
   if(is_any_positive){
     var pie = new Chart($("#pie1-chart"), {
       type: 'doughnut',
@@ -115,9 +120,9 @@ jQuery(function(){
         labels: ['Whitelisted', 'Unknown', 'Violated'],
         datasets: [dataset]
       }
-    });  
+    });
   }
- 
+
 });
 
 </script>
@@ -151,7 +156,7 @@ jQuery(function(){
 			var labels = [];
 			var dataset = {
 				data: [],
-				backgroundColor: []		
+				backgroundColor: []
 			};
 
 
