--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,6 +1,11 @@
 
 .navbar {
 
+  .logo_small {
+    margin-top: 2px;
+    margin-left: 5px;
+  }
+
   & .main_logo {
     padding: 0px 0px 0px 0px;
     margin-left: 0;
@@ -13,28 +18,6 @@
     height: 25px;
   }
 
-  /* link separators */
-  .divider-vertical {
-    height: 10px;
-    margin: 15px 12px 0px 12px;
-    background-color: white;
-    border-style: ridge;
-    border: 1px solid white;
-  }
-}
-
-.navbar .nav > li {
-  float: left;
-  padding: 5px 0px 0px 0px;
-}
-
-
-.navbar-fixed-top {
-  border-top: 0;
-  border-left: 0;
-  border-right: 0;
-  background-color: white;
-  border-bottom: 1px solid #eeeeee;
 }
 
 .navbar .nav > li > a {
