--- a/app/views/user/projects/helpers/_show_licenses.html.erb
+++ b/app/views/user/projects/helpers/_show_licenses.html.erb
@@ -25,7 +25,10 @@
   <%= render :partial => "shared/product_license_table", :locals => {:dependencies => @child.dependencies, :width => "615", :project_id => @child.id.to_s, :license_whitelist_id => @project.license_whitelist_id, :display_charts => true, :display_grouping => true, :display_pdf_export => true} %>
 <% end %>
 
-<% if @summary.nil? && ( subproject_name( @child ).match(/\.lock$/).nil? && !@child.dependencies.empty? ) %>
+<% if @summary.nil? && !@child.dependencies.empty? &&
+      ( subproject_name( @child ).match(/\.lock$/).nil? &&
+      ( subproject_name( @child ).match(/\AGemfile\z/i).nil? &&
+      ( subproject_name( @child ).match(/\Acomposer.json\z/i).nil? ) %>
   <div id="trans_deps" style="margin-top: 15px;">
     <h3>Licenses of transitive dependencies</h3>
     <form id="trans_dep_form" action="<%= transitive_dependencies_user_project_path(@child) %>" data-remote="true" method="post" >
