--- a/app/views/user/projects/helpers/_show_licenses.html.erb
+++ b/app/views/user/projects/helpers/_show_licenses.html.erb
@@ -26,8 +26,8 @@
 <% end %>
 
 <% if @summary.nil? && !@child.dependencies.empty? &&
-      ( subproject_name( @child ).match(/\.lock$/).nil? &&
-      ( subproject_name( @child ).match(/\AGemfile\z/i).nil? &&
+      ( subproject_name( @child ).match(/\.lock$/).nil? ) &&
+      ( subproject_name( @child ).match(/\AGemfile\z/i).nil? ) &&
       ( subproject_name( @child ).match(/\Acomposer.json\z/i).nil? ) %>
   <div id="trans_deps" style="margin-top: 15px;">
     <h3>Licenses of transitive dependencies</h3>
