Improve Node.JS integration

--- a/app/views/shared/_feature_package_managers.html.erb
+++ b/app/views/shared/_feature_package_managers.html.erb
@@ -20,6 +20,7 @@
             <li><a href="https://bundler.io/">Bundler</a> (Ruby)</li>
             <li><a href="https://pypi.python.org/pypi/pip/">PIP</a> (Python)</li>
             <li><a href="https://www.npmjs.org/">NPM</a> (Node.JS)</li>
+            <li><a href="https://yarnpkg.com/en/">Yarn</a> (Node.JS)</li>
             <li><a href="http://bower.io/">Bower</a> (JavaScript)</li>
             <li><a href="http://cocoapods.org/">CocoaPods</a> (Objective-C)</li>
             <li><a href="http://maven.apache.org/">Maven</a> (Java)</li>
