--- a/app/views/user/projects/init_new.html.erb
+++ b/app/views/user/projects/init_new.html.erb
@@ -8,29 +8,34 @@
     Add a new project to VersionEye
   </div>
   <div class="content" >
-    <form class="form-inline" action="<%= projects_new_f_path %>" accept-charset="UTF-8" method="post">
-      <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
-      <div class= "controls">
+    <% if @organisations.nil? || @organisations.empty? %>
+      It seems you don't have permissions to create new projects. You have to be in the "Owners" team of an organisation to be able to create a new project from here.
+    <% else %>
+      <form class="form-inline" action="<%= projects_new_f_path %>" accept-charset="UTF-8" method="post">
+        <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
+        <div class= "controls">
 
-        <%= label_tag :organisation, "Organisation:", :class => "control-label", :for => "organisation" %>
-        <select name="organisation"  id="organisation" class="form-control" >
-          <% @organisations.each do |orga| %>
-            <option value="<%= orga.ids %>" ><%= orga.name %></option>
-          <% end %>
-        </select>
+          <%= label_tag :organisation, "Organisation:", :class => "control-label", :for => "organisation" %>
+          <select name="organisation"  id="organisation" class="form-control" >
+            <% @organisations.each do |orga| %>
+              <% next if orga.nil? %>
+              <option value="<%= orga.ids %>" ><%= orga.name %></option>
+            <% end %>
+          </select>
 
-        <%= label_tag :source, "Source:", :class => "control-label", :for => "source" %>
-        <select name="source"  id="source" class="form-control" style="width: 100px;">
-          <option value="github" >GitHub</option>
-          <option value="bitbucket" >Bitbucket</option>
-          <option value="stash" >Stash</option>
-          <option value="url" >URL</option>
-          <option value="upload" >Upload</option>
-        </select>
+          <%= label_tag :source, "Source:", :class => "control-label", :for => "source" %>
+          <select name="source"  id="source" class="form-control" style="width: 100px;">
+            <option value="github" >GitHub</option>
+            <option value="bitbucket" >Bitbucket</option>
+            <option value="stash" >Stash</option>
+            <option value="url" >URL</option>
+            <option value="upload" >Upload</option>
+          </select>
 
-        <button type="submit" class="btn btn-primary">Continue</button>
-      </div>
-    </form>
+          <button type="submit" class="btn btn-primary">Continue</button>
+        </div>
+      </form>
+    <% end %>
   </div>
 
 </div>
