Update dep ranking

--- a/app/views/user/projects/helpers/_show_dependencies.html.erb
+++ b/app/views/user/projects/helpers/_show_dependencies.html.erb
@@ -19,7 +19,7 @@
         <% deps = @child.dependencies( scope ) %>
         <% if deps && !deps.empty? %>
           <% add_status_to_deps( deps ) %>
-          <% deps = deps.sort_by {|dep| dep[:status_rank] } %>
+          <% deps = deps.sort_by {|dep| dep.status_rank } %>
           <div style="padding-top: 15px;">
             <span style="color: gray;"><%= scope %> scope</span>
             <%= render partial: "project_dependency_table", locals: {deps: deps } %>
