--- a/app/views/organisations/components.html.erb
+++ b/app/views/organisations/components.html.erb
@@ -55,7 +55,7 @@
           <select name="duplicates"  id="duplicates" class="form-control" >
             <option value="ALL"             <%= "selected" if params[:duplicates].to_s.eql?('ALL')             %> >All components</option>
             <option value="duplicates_only" <%= "selected" if params[:duplicates].to_s.eql?('duplicates_only') %> >Only duplicates</option>
-            <option value="show_duplicates" <%= "selected" if params[:duplicates].to_s.eql?('show_duplicates') %> >Show duplicates</option>
+            <option value="show_duplicates" <%= "selected" if params[:duplicates].to_s.eql?('show_duplicates') %> >Used in other teams</option>
           </select>
 
           <button type="submit" class="btn btn-primary" >Filter</button>
