Support for Rust/Crates.io

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,6 +19,7 @@
       "#{Project::A_TYPE_BOWER}"     => 'products/product_show_bower',
       "#{Project::A_TYPE_CHEF}"      => 'products/product_show_chef',
       "#{Project::A_TYPE_NUGET}"     => 'products/product_show_nuget',
+      "#{Project::A_TYPE_CRATES}"    => 'products/product_show_crates'
     } %>
 
     <% if ["Java", "Clojure"].member? @product.language %>
