--- a/app/views/products/_product_show_dependencies.html.erb
+++ b/app/views/products/_product_show_dependencies.html.erb
@@ -15,7 +15,8 @@
       "#{Project::A_TYPE_COCOAPODS}" => 'products/cocoapods/product_show_dependencies',
       "#{Project::A_TYPE_BIICODE}"   => 'product_show_dependencies_biicode',
       "#{Project::A_TYPE_CHEF}"      => 'product_show_dependencies_chef',
-      "#{Project::A_TYPE_NUGET}"     => 'product_show_dependencies_nuget'
+      "#{Project::A_TYPE_NUGET}"     => 'product_show_dependencies_nuget',
+      "#{Project::A_TYPE_CRATES}"    => 'product_show_dependencies_crates'
     }
 
     partial = partial_map[@product.prod_type]
