--- a/app/views/products/_product_show_crates.erb
+++ b/app/views/products/_product_show_crates.erb
@@ -14,6 +14,7 @@
 <div class="col-md-3 col-sm-4 pull-right sidebar content_head_top" >
   <%= render 'products/helpers/follow' %>
   <%= render 'products/helpers/kpis' %>
+  <%= render 'products/product_show_authors' %>
   <%= render 'products/product_show_followers' %>
   <%= render 'products/product_show_links' %>
   <%= render 'products/product_show_twitter_follow' %>
