--- a/app/views/layouts/_footer_content.html.erb
+++ b/app/views/layouts/_footer_content.html.erb
@@ -51,6 +51,7 @@
     <a href="/objective-c" >Objective-C</a> |
     <a href="/clojure" >Clojure</a> |
     <a href="/r" >R</a> |
+    <a href="/rust" >Rust</a>
     <a href="/chef" >Chef</a>
   </div>
 
