Update supported files and about page

--- a/app/views/shared/_feature_package_managers.html.erb
+++ b/app/views/shared/_feature_package_managers.html.erb
@@ -28,6 +28,7 @@
             <li><a href="http://www.gradleware.com/">Gradle</a> (Groovy)</li>
             <li><a href="http://leiningen.org/">Leiningen</a> (Clojure)</li>
             <li><a href="https://www.nuget.org/">Nuget</a> (Microsoft .NET platform)</li>
+            <li><a href="https://crates.io/">Cargo</a> (Rust)</li>
             <li><a href="https://www.biicode.com/">Biicode</a> (C/C++)</li>
             <li><a href="http://berkshelf.com/">Berkshelf</a> (Chef)</li>
         </ul>
