--- a/app/views/products/helpers/_file_upload.html.erb
+++ b/app/views/products/helpers/_file_upload.html.erb
@@ -5,7 +5,7 @@
       Simply upload a project file to see which dependencies are outdated.
     </div>
     <div class = "span6">
-      <div style="margin-bottom: 10px;">Supported files: Gemfile, Gemfile.lock, pom.xml, dependency.gradle, project.clj, build.sbt, composer.json, composer.lock, requirements.txt, setup.py, package.json, Podfile, Podfile.lock
+      <div style="margin-bottom: 10px;">Supported files: Gemfile, Gemfile.lock, .gemspec, pom.xml, .gradle, project.clj, build.sbt, composer.json, composer.lock, requirements.txt, setup.py, package.json, Podfile, Podfile.lock, yarn.lock, npm-shrinkwrap.json, Cargo.toml
       </div>
 
       <%= form_tag "/services", :multipart => true, :accept => "text/xml", :style => "margin: 0;" do %>
