--- a/app/views/organisations/_navi.html.erb
+++ b/app/views/organisations/_navi.html.erb
@@ -1,55 +1,57 @@
-<% title "Organisation: #{@organisation.name}" %>
+<% if @organisation %>
+  <% title "Organisation: #{@organisation.name}" %>
 
-<div class="navbar navbar-default" >
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#orga-menu" aria-expanded="false">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-  </div>
-
-  <div class="collapse navbar-collapse" id="orga-menu">
-    <div class="navi nav-stacked" >
-      <% if signed_in? %>
-        <ul class = "nav nav-pills nav-stacked">
-          <li><%= link_to 'Profile', organisation_path(@organisation) %></li>
-          <li><%= link_to 'Teams', organisation_teams_path(@organisation) %></li>
-          <li><%= link_to 'License Whitelists', organisation_license_whitelists_path(@organisation) %></li>
-          <li><%= link_to 'Component Whitelists', organisation_component_whitelists_path(@organisation) %></li>
-          <li><%= link_to 'Projects', projects_organisation_path(@organisation) %></li>
-          <% if OrganisationService.allowed_to_transfer_projects?( @organisation, current_user ) %>
-            <% if github_enabled? %>
-              <li><%= link_to ' -- Create From GitHub', user_projects_github_repositories_path, :rel => "nofollow" %></li>
-            <% end %>
-            <% if bitbucket_enabled? %>
-              <li><%= link_to ' -- Create From Bitbucket', user_projects_bitbucket_repositories_path, :rel => "nofollow" %></li>
-            <% end %>
-            <% if stash_enabled? %>
-              <li><%= link_to ' -- Create From Stash', user_projects_stash_repositories_path, :rel => "nofollow" %></li>
-            <% end %>
-            <li><%= link_to ' -- Create From URL', new_user_project_path, :rel => "nofollow" %></li>
-            <li><%= link_to ' -- Create From Upload', user_projects_upload_path, :rel => "nofollow" %></li>
-          <% end %>
-          <% if github_enabled? %>
-            <li><%= link_to 'Pullrequests', pullrequests_organisation_path(@organisation), :rel => "nofollow" %></li>
-          <% end %>
-          <li><%= link_to 'Inventory', components_organisation_path(@organisation) %></li>
-          <% if is_orga_owner?(@organisation, current_user) %>
-            <li><hr/></li>
-            <li><%= link_to 'API Key', apikey_organisation_path(@organisation) %></li>
-            <% if !Rails.env.enterprise? %>
-              <li><%= link_to 'Plan', plan_organisation_path(@organisation) %></li>
-              <li><%= link_to 'Billing address', billing_address_organisation_path(@organisation) %></li>
-              <li><%= link_to 'Payment history', payment_history_organisation_path(@organisation) %></li>
-            <% end %>
-          <% end %>
-        </ul>
-      <% else %>
-        <%= render '/shared/signup_ad' %>
-      <% end %>
+  <div class="navbar navbar-default" >
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#orga-menu" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
     </div>
-  </div>
 
-</div>
+    <div class="collapse navbar-collapse" id="orga-menu">
+      <div class="navi nav-stacked" >
+        <% if signed_in? %>
+          <ul class = "nav nav-pills nav-stacked">
+            <li><%= link_to 'Profile', organisation_path(@organisation) %></li>
+            <li><%= link_to 'Teams', organisation_teams_path(@organisation) %></li>
+            <li><%= link_to 'License Whitelists', organisation_license_whitelists_path(@organisation) %></li>
+            <li><%= link_to 'Component Whitelists', organisation_component_whitelists_path(@organisation) %></li>
+            <li><%= link_to 'Projects', projects_organisation_path(@organisation) %></li>
+            <% if OrganisationService.allowed_to_transfer_projects?( @organisation, current_user ) %>
+              <% if github_enabled? %>
+                <li><%= link_to ' -- Create From GitHub', user_projects_github_repositories_path, :rel => "nofollow" %></li>
+              <% end %>
+              <% if bitbucket_enabled? %>
+                <li><%= link_to ' -- Create From Bitbucket', user_projects_bitbucket_repositories_path, :rel => "nofollow" %></li>
+              <% end %>
+              <% if stash_enabled? %>
+                <li><%= link_to ' -- Create From Stash', user_projects_stash_repositories_path, :rel => "nofollow" %></li>
+              <% end %>
+              <li><%= link_to ' -- Create From URL', new_user_project_path, :rel => "nofollow" %></li>
+              <li><%= link_to ' -- Create From Upload', user_projects_upload_path, :rel => "nofollow" %></li>
+            <% end %>
+            <% if github_enabled? %>
+              <li><%= link_to 'Pullrequests', pullrequests_organisation_path(@organisation), :rel => "nofollow" %></li>
+            <% end %>
+            <li><%= link_to 'Inventory', components_organisation_path(@organisation) %></li>
+            <% if is_orga_owner?(@organisation, current_user) %>
+              <li><hr/></li>
+              <li><%= link_to 'API Key', apikey_organisation_path(@organisation) %></li>
+              <% if !Rails.env.enterprise? %>
+                <li><%= link_to 'Plan', plan_organisation_path(@organisation) %></li>
+                <li><%= link_to 'Billing address', billing_address_organisation_path(@organisation) %></li>
+                <li><%= link_to 'Payment history', payment_history_organisation_path(@organisation) %></li>
+              <% end %>
+            <% end %>
+          </ul>
+        <% else %>
+          <%= render '/shared/signup_ad' %>
+        <% end %>
+      </div>
+    </div>
+
+  </div>
+<% end %>
