--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,17 +19,18 @@
       "#{Project::A_TYPE_BOWER}"     => 'products/product_show_bower',
       "#{Project::A_TYPE_CHEF}"      => 'products/product_show_chef',
       "#{Project::A_TYPE_NUGET}"     => 'products/product_show_nuget',
-      "#{Project::A_TYPE_CARGO}"    => 'products/product_show_crates'
+      "#{Project::A_TYPE_CARGO}"     => 'products/product_show_crates',
+      "crates"                       => 'products/product_show_crates'
     } %>
 
     <% if ["Java", "Clojure"].member? @product.language %>
       <%= render 'products/product_show_maven' %>
     <% elsif @product.prod_type.nil? %>
       <%= render partial_map[Project::A_TYPE_GITHUB] %>
-    <% elsif @product.prod_type.eql?("opa") %>
+    <% elsif @product.prod_type.to_s.eql?("opa") %>
       OPA is not supported anymore.
-    <% else %>
-      <%= render partial_map[@product.prod_type] %>
+    <% elsif partial_map[@product.prod_type.to_s] %>
+      <%= render partial_map[@product.prod_type.to_s] %>
     <% end %>
 
     <% if signed_in? == false && !Settings.instance.environment.eql?('enterprise') %>
