--- a/app/views/user/projects/dependencies_status.json.erb
+++ b/app/views/user/projects/dependencies_status.json.erb
@@ -1,1 +1,1 @@
-{"status": <%= @sync_status.status %> , "info": <%= @sync_status.info %> }
+{"status": "<%= @sync_status.status %>" , "info": "<%= @sync_status.info %>" }
