--- a/app/views/user/projects/_project_dependency_table.html.erb
+++ b/app/views/user/projects/_project_dependency_table.html.erb
@@ -1,5 +1,14 @@
 <% if deps %>
-  <table class="dependency_table" >
+
+  <% if defined?(display_pdf_export) && display_pdf_export && display_pdf_export == true && !project_id.nil? && !project_id.to_s.empty? && !license_whitelist_id.to_s.empty? %>
+    <div style="margin: 10px 0 7px 0;">
+      <%= link_to 'BoM PDF Export', lwl_export_user_project_path( project_id ) %> |
+      <%= link_to 'BoM CSV Export', lwl_csv_export_user_project_path( project_id ) %>
+    </div>
+  <% end %>
+
+  <% @license_hash = Hash.new %>
+  <table class="dependency_table table table-striped" >
     <thead style="height: 30px;">
       <tr>
         <th class="name_col_after_icon">Dependency</th>
@@ -12,4 +21,35 @@
       <%= render partial: "/user/projects/helpers/project_dependency_row", collection: deps, as: :dep %>
     </tbody>
   </table>
+
+  <% if !@child.language.to_s.eql?(Product::A_LANGUAGE_PYTHON) && !@child.language.to_s.eql?(Product::A_LANGUAGE_R) %>
+    <div style="padding-top: 7px;">
+      <%= link_to "Visual Dependencies", visual_user_project_path( @child ) %>
+    </div>
+  <% end %>
+  <% if defined?(display_charts) && display_charts == true %>
+    <%= render partial: "dep_pie_chart", locals: {deps: @child.dependencies } %>
+  <% end %>
+  <%= render partial: "dep_licenses_grouped", locals: {display_grouping: display_grouping } %>
+  <%= render partial: "dep_licenses_chart", locals: {display_grouping: display_grouping } %>
+
+  <% if @summary.nil? && !@child.dependencies.empty? &&
+      ( subproject_name( @child ).match(/\.lock$/).nil? ) &&
+      ( subproject_name( @child ).match(/\AGemfile\z/i).nil? ) &&
+      ( subproject_name( @child ).match(/\Acomposer.json\z/i).nil? ) %>
+    <div id="trans_deps" style="margin-top: 15px;">
+      <h3>Licenses of transitive dependencies</h3>
+      <form id="trans_dep_form" action="<%= transitive_dependencies_user_project_path(@child) %>" data-remote="true" method="post" >
+        <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
+        <input hidden="true" name="id" value="<%= @child.id.to_s %>" />
+        <button type="submit" class="btn btn-primary"
+          onclick="document.getElementById('progress_bar').style.display='block';
+                   document.getElementById('trans_dep_form').style.display='none'; " >Show licenses for transitive dependencies</button>
+      </form>
+      <div id="progress_bar" style="display: none">
+        <%= image_tag "loadingbar.gif" %>
+      </div>
+    </div>
+  <% end %>
+
 <% end %>
