--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -188,10 +188,7 @@
       <div style="margin-top: 20px;">
         <ul class="nav nav-tabs" style="margin-bottom: 0" id="projectTabs">
           <li class="active">
-            <a data-target="#dependencies" data-toggle="tab" onclick="page_view('ga_project_dependencies')"><i class = "fa fa-puzzle-piece">&nbsp;</i>Versions</a>
-          </li>
-          <li>
-            <a data-target="#licenses" data-toggle="tab" onclick="page_view('ga_project_licenses')"><i class = "fa fa-tasks">&nbsp;</i>Licenses</a>
+            <a data-target="#dependencies" data-toggle="tab" onclick="page_view('ga_project_dependencies')"><i class = "fa fa-puzzle-piece">&nbsp;</i>Dependencies</a>
           </li>
           <% if @project.language.eql?(Product::A_LANGUAGE_PHP) ||
                 @project.language.eql?(Product::A_LANGUAGE_NODEJS) ||
@@ -212,17 +209,9 @@
         <div class="tab-content" style="width: 100%;" >
           <div id="dependencies" class="tab-pane active" >
 
-            <%= render partial: "user/projects/helpers/show_subprojects", locals: {parent_project: @project, child_project: @child, tab_id: 'dependencies'} %>
+            <%= render partial: "user/projects/helpers/show_subprojects",  locals: {parent_project: @project, child_project: @child, tab_id: 'dependencies'} %>
 
             <%= render partial: "user/projects/helpers/show_dependencies", locals: {parent_project: @project, child_project: @child, tab_id: 'dependencies'} %>
-
-          </div>
-
-          <div id="licenses" class="tab-pane">
-
-            <%= render partial: "user/projects/helpers/show_subprojects", locals: {parent_project: @project, child_project: @child, tab_id: 'licenses'} %>
-
-            <%= render partial: "user/projects/helpers/show_licenses", locals: {parent_project: @project, child_project: @child, tab_id: 'licenses'} %>
 
           </div>
 
