Update dependency view

--- a/app/views/user/projects/helpers/_show_dependencies.html.erb
+++ b/app/views/user/projects/helpers/_show_dependencies.html.erb
@@ -33,6 +33,8 @@
           </div>
         <% end %>
       <% end %>
+      <% @summary = nil %>
+      <%= render partial: "pfile_summary", locals: { :display_grouping => true, :display_charts => true } %>
     </div>
 
   <% else %>
